--- a/env.yml
+++ b/env.yml
@@ -5,12 +5,14 @@ channels:
 
 dependencies:
   - pip
-  - python >=3.7
+  - python >=3.10
   - pandas
   - matplotlib
   - scikit-learn
+  - torchmetrics
   - numpy
-  - tqdm 
+  - tqdm
+  - optuna 
   - datamol
   - notebook
   - pytdc
