WIP: Adding Graphormer and ChemBERTa

--- a/env.yml
+++ b/env.yml
@@ -19,7 +19,8 @@ dependencies:
   - typer
   - gcsfs
   - pyarrow
-  - fastparquet 
+  - fastparquet
+  - transformers 
 
   # Dev
   - black >=20.8b1
