--- a/env.yml
+++ b/env.yml
@@ -10,6 +10,8 @@ dependencies:
   - matplotlib
   - scikit-learn
   - torchmetrics
+  - pytorch-lightning
+  - pytorch >=1.10.2
   - numpy
   - tqdm
   - optuna 
