--- a/env.yml
+++ b/env.yml
@@ -12,7 +12,7 @@ dependencies:
   - torchmetrics
   - pytorch-lightning
   - pytorch >=1.10.2
-  - numpy
+  - numpy <1.24
   - tqdm
   - optuna 
   - datamol
