Bootstrap the release of the MOOD repo

--- a/env.yml
+++ b/env.yml
@@ -10,7 +10,7 @@ dependencies:
   - matplotlib
   - scikit-learn
   - torchmetrics
-  - pytorch-lightning
+  - pytorch-lightning <2.0
   - pytorch >=1.10.2
   - numpy <1.24
   - tqdm
